<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movie_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    app:cardBackgroundColor="@color/background"
    app:cardCornerRadius="8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:strokeColor="@color/stroke_line_color"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/movie_list_card_background">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/movie_1_poster"
            android:layout_width="match_parent"
            android:layout_height="246dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginTop="2dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/avengers_end_game_poster"
            app:layout_constraintBottom_toTopOf="@+id/movie_1_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/MovieList_Poster_Image" />

        <ImageView
            android:id="@+id/movie_1_poster_gradient"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/background_poster_gradient"
            app:layout_constraintBottom_toBottomOf="@+id/movie_1_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/movie_1_genre"
            style="@style/movie_list_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/double_min_value_margin"
            android:layout_marginVertical="214dp"
            android:text="@string/action_adventure_drama"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/movie_1_age_limit"
            style="@style/movie_list_age_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_age_limit_background"
            android:gravity="center"
            android:text="@string/avengers_age_limit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/movie_1_like"
            android:layout_width="16dp"
            android:layout_height="14dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="6dp"
            android:alpha="0.75"
            android:src="@drawable/ic_like_off"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.stopkaaaa.androidacademyproject.RatingBarSvg
            android:id="@+id/movie_1_rating"
            style="@style/MoviesRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="8dp"
            android:layout_marginStart="@dimen/double_min_value_margin"
            android:numStars="5"
            android:rating="4"
            android:stepSize="1"
            app:layout_constraintBottom_toBottomOf="@+id/movie_1_reviews_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movie_1_reviews_count" />

        <TextView
            android:id="@+id/movie_1_reviews_count"
            style="@style/movie_list_reviews_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical"
            android:text="@string/reviews_count"
            app:layout_constraintStart_toEndOf="@+id/movie_1_rating"
            app:layout_constraintTop_toBottomOf="@+id/movie_1_genre" />

        <TextView
            android:id="@+id/movie_1_title"
            style="@style/movie_list_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/double_min_value_margin"
            android:layout_marginTop="@dimen/double_min_value_margin"
            android:text="@string/avengers_end_game_movie_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_1_poster" />

        <TextView
            android:id="@+id/movie_1_duration"
            style="@style/movie_list_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/double_min_value_margin"
            android:layout_marginBottom="@dimen/double_min_value_margin"
            android:text="@string/avengers_duration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_1_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>
