<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_aim"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="@dimen/horizontal_screen_boarders_margin"
            android:layout_marginTop="@dimen/back_arrow_top_margin"
            app:layout_constraintEnd_toStartOf="@+id/movie_list_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_aim" />

        <TextView
            android:id="@+id/movie_list_title"
            style="@style/movie_list_title"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginStart="@dimen/double_min_value_margin"
            android:layout_marginTop="55dp"
            android:text="@string/movie_list"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/ic_aim"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_margin_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="12dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_margin_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="12dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/movie_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="@dimen/movie_list_posters_margin"
            android:layout_marginBottom="@dimen/movie_list_posters_margin"
            app:layout_constraintBottom_toTopOf="@+id/movie_3"
            app:layout_constraintEnd_toStartOf="@+id/movie_2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/start_margin_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_list_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">

                <ImageView
                    android:id="@+id/movie_1_poster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avengers_end_game_poster"
                    app:layout_constraintBottom_toTopOf="@+id/movie_1_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_1_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avengers_end_game_movie_list"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_1_poster" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/movie_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/movie_list_posters_margin"
            app:layout_constraintBottom_toTopOf="@+id/movie_4"
            app:layout_constraintEnd_toStartOf="@+id/end_margin_guideline"
            app:layout_constraintStart_toEndOf="@+id/movie_1"
            app:layout_constraintTop_toTopOf="@id/movie_1">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">

                <ImageView
                    android:id="@+id/movie_2_poster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tenet_poster"
                    app:layout_constraintBottom_toTopOf="@+id/movie_2_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_2_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tenet"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_2_poster" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/movie_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/movie_list_posters_margin"
            android:layout_marginBottom="101dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/movie_4"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/start_margin_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">

                <ImageView
                    android:id="@+id/movie_3_poster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/black_widow_poster"
                    app:layout_constraintBottom_toTopOf="@+id/movie_3_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_3_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/black_widow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_3_poster" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/movie_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="101dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/end_margin_guideline"
            app:layout_constraintStart_toEndOf="@+id/movie_3"
            app:layout_constraintTop_toBottomOf="@id/movie_2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">

                <ImageView
                    android:id="@+id/movie_4_poster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/wonder_woman_poster"
                    app:layout_constraintBottom_toTopOf="@+id/movie_4_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_4_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wonder_woman_1984"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_4_poster" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>